--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
     </head>
     <body>
       <header>
+        
         <img src="img/logo.svg" alt="logo" width="150px" height="100px">
 
       </header>
 
       <main>
+
+        <h1>Internet deve essere a servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
+
+        <span class="intro">scritto da <span class="informazione">The booleaner</span></span>
+
+        <br>
+
+        <span class="data">il 10/10/2020</span>
 
       </main>
 
