--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
       <main>
 
         <h1>Internet deve essere a servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
+        <p>scritto da <span class="informazione">The booleaner</span><br>il 10/10/2020</p>
 
-        <span class="intro">scritto da <span class="informazione">The booleaner</span></span>
 
-        <br>
+        <img src="img/tim-1.jpg" alt="Tymmy">
+        <img src="img/tim-2.jpg" alt="Tymmy2">
 
-        <span class="data">il 10/10/2020</span>
+        <span>1st photo John S and James L. Knight <br>2nd photo Tim Wikipedia</span>
+        
 
       </main>
 
